@@ -39,6 +39,7 @@ Version 0.4.0 - ??
 - [bugfix] Fix nullPlaceholders in WFTextField and WFTextArea. They weren't italicizing on initial load or if the value was the same as the nullPlaceholder.
 - [improved] Make WFCheckbox.label support multi-value pattern bindings.
 - [improved] YAHOO_widget_AutoComplete now supports passing back additional arguments into the callback via a PHOCOA.widgets.<acId>.yuiDelegate.dynamicDataLoaderCollectArguments function.
+- [new] YAHOO_widget_TabView is now augmented with a goToTab(id) function that allows you to activate a tab by its phocoa ID.
 
 Version 0.3.9 - 10/21/2010
 - [new] Add WFRequestController->isMobileBrowser()
